fix(style): fix the style
fix #17695, fix #17703, fix #17648, fix #17640, fix #17722, fix #17667

--- a/engine-ui/packages/console-ui/src/webapps/analyticsEngine/styles/views/workbench.scss
+++ b/engine-ui/packages/console-ui/src/webapps/analyticsEngine/styles/views/workbench.scss
@@ -147,7 +147,7 @@
                 text-align: left;
                 min-width: 150px;
                 border-radius: 0;
-                border-bottom: 1px solid #dddddd;
+                // border-bottom: 1px solid #dddddd;
                 background: #FAFAFA;
                 font-size: 12px;
                 color: #333333;
