--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/task.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/task.scss
@@ -285,6 +285,7 @@
                 border-right: none;
             }
             header {
+                height: 41px;
                 flex-grow: 0;
                 flex-shrink: 0;
                 // border-bottom: 1px solid #E8E8E8;
