--- a/engine-ui/packages/console-ui/src/webapps/science/styles/views/layout.scss
+++ b/engine-ui/packages/console-ui/src/webapps/science/styles/views/layout.scss
@@ -2,9 +2,10 @@
     .sidebar {
         height: 100%;
         position: relative;
-        // .s-catalogue {
-        //     background: #f5f5f5;
-        // }
+        .s-catalogue {
+            padding: 0px 15px 5px 12px;
+            margin-top: 6px;
+        }
     }
     .container{
         background: #ffffff;
