--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/main.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/main.scss
@@ -34,6 +34,18 @@ body:-webkit-full-screen {
     left: 0;
 }
 
+.ant-slider-pos {
+    .ant-slider-pos--collapsed {
+        background: #262E36;
+        color: #fff;
+        width: 100%;
+        border: none;
+        border-radius: 0;
+        height: 42px;
+        border-right: 1px solid #e9e9e9;
+    }
+}
+
 .bg-w {
     background: #fff !important;
 }
