--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/layout.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/layout.scss
@@ -62,7 +62,7 @@ $activeColor: #262e36; // 主色
     
     .sidebar {
         height: 100%;
-        border-right: 1px solid #e9e9e9;
+        // border-right: 1px solid #e9e9e9;
     }
     
 }
