fix(style): fix the style
fix #17640, fix #17742

--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/task.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/task.scss
@@ -632,6 +632,8 @@
         .tab-ellipsis {
             width: 120px;
             line-height: 19px;
+            white-space: nowrap;
+            overflow: hidden;
         }
 
         .workflow-name {
