fix(style): fix the style
fix #17648, fix #17741

--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/dataManage.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/dataManage.scss
@@ -1,4 +1,10 @@
 .g-datamanage {
+    .ant-layout-sider-collapsed {
+        .anticon {
+            font-size: 16px;
+            line-height: 42px;
+        }
+    }
     $green: #009D7E; // ======== folder tree icon 
     // ==== misc====
     .Resizer {
