fix(style): fix the style

--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/main.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/main.scss
@@ -41,6 +41,8 @@ body:-webkit-full-screen {
         width: 100%;
         border: none;
         border-radius: 0;
+        text-align: center;
+        line-height: 42px;
         height: 42px;
         border-right: 1px solid #e9e9e9;
     }
