--- a/engine-ui/packages/console-ui/src/webapps/science/styles/views/workbench/index.scss
+++ b/engine-ui/packages/console-ui/src/webapps/science/styles/views/workbench/index.scss
@@ -26,7 +26,8 @@
         right: 0px;
         left: 0px;
         bottom: 0px;
-        padding: 6px 15px 5px 12px;
+        padding: 0px 15px 5px 12px;
+        margin-top: 6px;
         overflow: auto;
 
         .ant-tree {
