--- a/engine-ui/packages/console-ui/src/webapps/stream/styles/pages/task.scss
+++ b/engine-ui/packages/console-ui/src/webapps/stream/styles/pages/task.scss
@@ -672,6 +672,7 @@
                 border-bottom: 1px solid #e9e9e9;
                 border-radius: 4px;
                 padding-right: 0;
+                background-color: #f5f5f5;
                 >.ant-tabs-tabpane{
                     height: 100%;
                 }
