--- a/engine-ui/packages/console-ui/src/webapps/stream/styles/pages/task.scss
+++ b/engine-ui/packages/console-ui/src/webapps/stream/styles/pages/task.scss
@@ -672,7 +672,7 @@
                 border-bottom: 1px solid #e9e9e9;
                 border-radius: 4px;
                 padding-right: 0;
-                background-color: #f5f5f5;
+                // background-color: #f5f5f5;
                 >.ant-tabs-tabpane{
                     height: 100%;
                 }
@@ -718,7 +718,7 @@
                 }
             }
             .ant-tabs-tab-active{
-                margin-left: 1!important;
+                margin-left: 1px !important;
             }
             .task-info {
                 padding: 10px;
