--- a/engine-ui/packages/console-ui/src/webapps/stream/styles/pages/layout.scss
+++ b/engine-ui/packages/console-ui/src/webapps/stream/styles/pages/layout.scss
@@ -18,6 +18,9 @@ $activeColor: #262e36; // 主色
     
     .container {
         min-width: $minWidth;
+        .ant-layout {
+            height: auto;
+        }
     }
 
     .header {
