--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/dataManage.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/dataManage.scss
@@ -270,6 +270,9 @@
             float: right;
         }
     }
+    .vertical-middle {
+        height: 100%;
+    }
     .vertical-middle:after{
         content: '';
         vertical-align: middle;
@@ -387,11 +390,11 @@
     .sidebar__icon {
         margin-top: 12px;
     }
-    &.ant-menu-inline-collapsed {
-        .sidebar__icon {
-            margin-top: 0px;
-        }
-    }
+    // &.ant-menu-inline-collapsed {
+    //     .sidebar__icon {
+    //         margin-top: 0px;
+    //     }
+    // }
 }
 
 .ant-layout-sider-trigger {
