fix(style & taskFlowView & audit): fix style & taskFlow height collapse
fix #17802, fix #17918

--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/main.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/main.scss
@@ -136,6 +136,14 @@ body:-webkit-full-screen {
         padding: 0;
     }
 }
+.modal-body--height100 {
+    .ant-modal-content {
+        height: 100%;
+        .ant-modal-body {
+            height: 100%;
+        }
+    }
+}
 
 .ant-calendar-picker {
     display: inline-block;
