feat: add impalaSQL task

--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/task.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/task.scss
@@ -271,6 +271,11 @@
                 background-image: url(/public/rdos/img/librasql.svg)
             }
         }
+        .s-impalasql {
+            .ant-tree-icon__docu {
+                background-image: url(/public/rdos/img/impalasql.svg)
+            }
+        }
         .s-table {
             .ant-tree-icon__docu {
                 background-image: url(/public/rdos/img/table.svg)
