fix(style & stream): fix the stream style & bug
fix #17918

--- a/engine-ui/packages/console-ui/src/webapps/stream/styles/pages/dataSource.scss
+++ b/engine-ui/packages/console-ui/src/webapps/stream/styles/pages/dataSource.scss
@@ -107,4 +107,9 @@
 	.m-table tr>td:last-child, .m-table tr>th:last-child{
 		padding-right: 15px;
 	}
+	.noBorderBottom {
+		.ant-card-head {
+			border-bottom: none
+		}
+	}
 }
