--- a/engine-ui/packages/console-ui/src/webapps/stream/styles/pages/operation.scss
+++ b/engine-ui/packages/console-ui/src/webapps/stream/styles/pages/operation.scss
@@ -291,6 +291,9 @@
     }
 }
 .middle-collapse{
+    &.middle-collapse--noBorderTop {
+        border-top-width: 0;
+    }
     &.ant-collapse {
         & > .ant-collapse-item{
             
