--- a/engine-ui/packages/console-ui/src/webapps/stream/styles/main.scss
+++ b/engine-ui/packages/console-ui/src/webapps/stream/styles/main.scss
@@ -22,7 +22,19 @@ body:-webkit-full-screen {
     width: 100%;
     height: 100%;
 }
-
+.ant-slider-pos {
+    .ant-slider-pos--collapsed {
+        background: #262E36;
+        color: #fff;
+        width: 100%;
+        border: none;
+        border-radius: 0;
+        text-align: center;
+        line-height: 42px;
+        height: 42px;
+        border-right: 1px solid #e9e9e9;
+    }
+}
 .mask-layer {
     display: block;
     position: fixed;
