fix(container): fix the silder drag effect & other style
fix #18071

--- a/engine-ui/packages/console-ui/src/webapps/stream/styles/pages/task.scss
+++ b/engine-ui/packages/console-ui/src/webapps/stream/styles/pages/task.scss
@@ -508,7 +508,7 @@
         .ant-tabs.ant-tabs-card>.ant-tabs-bar .ant-tabs-tab .anticon-close {
             margin-top: -5px;
             line-height: 10px;
-            opacity: 1;
+            // opacity: 1;
             font-size: 11px;
         }
         .browser-tabs.ant-tabs.ant-tabs-card > .ant-tabs-bar .ant-tabs-tab {
@@ -604,11 +604,12 @@
         }
 
         .tab-ellipsis {
-            line-height: 19px;
             display: inline-block;
-            max-width: 200px;
-            overflow: hidden;
+            width: 120px;
+            line-height: 19px;
             text-overflow: ellipsis;
+            white-space: nowrap;
+            overflow: hidden;
         }
 
         .Resizer.vertical {
