--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/dataManage.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/dataManage.scss
@@ -411,9 +411,9 @@
 }
 
 .m-table-desen {
-    .ant-table {
-        border-width: 0;
-    }
+    // .ant-table {
+    //     border-width: 0;
+    // }
     .ant-table-thead > tr > th.ant-table-selection-column, .ant-table-tbody > tr > td.ant-table-selection-column {
         text-align: center;
         padding-right: 0;
