--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/themes/default.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/themes/default.scss
@@ -2,7 +2,7 @@
     * {
         &::-webkit-scrollbar-track {
             border: 1px solid #e9e9e9;
-            background-color: #ffffff;
+            // background-color: #ffffff;
             border-top: none;
             border-right: none;
         }
@@ -10,7 +10,7 @@
         &::-webkit-scrollbar {
             width: 12px;
             height: 12px;
-            background-color: #ffffff;
+            // background-color: #ffffff;
         }
 
         &::-webkit-scrollbar-thumb {
