--- a/engine-ui/packages/console-ui/src/webapps/main/styles/views/portal.scss
+++ b/engine-ui/packages/console-ui/src/webapps/main/styles/views/portal.scss
@@ -205,23 +205,26 @@
                 -webkit-appearance: none;
             }
             &:hover {
-                box-shadow: 0 5px 12px 0 rgba(24, 39, 140, 0.2);
+                box-shadow:  0 10px 20px 0 rgba(124,159,255,0.20);
+                border-radius: 2px;
             }
             .app-logo {
                 width: 96px;
                 height: 96px;
             }
             h1 {
+                font-family: PingFangSC-Medium;
                 font-size: 16px;
                 color: #333333;
-                letter-spacing: 1.11px;
-                font-weight: bold;
-                margin: 10px 0;
+                letter-spacing: 0;
+                text-align: center;
             }
             p {
-                font-size: 12px;
-                color: #333;
                 font-family: PingFangSC-Regular;
+                font-size: 14px;
+                color: #333333;
+                letter-spacing: 0;
+                text-align: center;
             }
         }
     }
